# gascii

./: .gitignore  CMakeLists.txt  README.md
include/: ASCII.h
lib/catch/: catch_amalgamated.cpp
lib/gopt/: gopt-errors.cpp  gopt.h
src/: ASCII.cpp  main.cpp
tests/: checkargs.cpp
